# ChangeLog for www-plugins/adobe-flash
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-plugins/adobe-flash/ChangeLog,v 1.181 2013/04/11 14:33:16 jer Exp $

*adobe-flash-11.2.202.280 (11 Apr 2013)
*adobe-flash-10.3.183.75 (11 Apr 2013)

  11 Apr 2013; Jeroen Roovers <jer@gentoo.org> +adobe-flash-10.3.183.75.ebuild,
  +adobe-flash-11.2.202.280.ebuild:
  Version bump (bug #465534).

  15 Mar 2013; Jeroen Roovers <jer@gentoo.org> -adobe-flash-11.2.202.273.ebuild:
  Old.

  15 Mar 2013; Agostino Sarubbo <ago@gentoo.org>
  adobe-flash-11.2.202.275.ebuild:
  Stable for x86, wrt bug #461598

  15 Mar 2013; Agostino Sarubbo <ago@gentoo.org>
  adobe-flash-11.2.202.275.ebuild:
  Stable for amd64, wrt bug #461598

*adobe-flash-11.2.202.275 (14 Mar 2013)
*adobe-flash-10.3.183.68 (14 Mar 2013)

  14 Mar 2013; Jeroen Roovers <jer@gentoo.org> -adobe-flash-10.3.183.67.ebuild,
  +adobe-flash-10.3.183.68.ebuild, +adobe-flash-11.2.202.275.ebuild:
  Version bump (bug #461598).

  27 Feb 2013; Jeroen Roovers <jer@gentoo.org>
  -adobe-flash-11.2.202.270.ebuild:
  Old.

  27 Feb 2013; Agostino Sarubbo <ago@gentoo.org>
  adobe-flash-11.2.202.273.ebuild:
  Stable for x86, wrt bug #459368

  27 Feb 2013; Sergey Popov <pinkbyte@gentoo.org>
  adobe-flash-11.2.202.273.ebuild:
  Stable on amd64, wrt bug #459368

*adobe-flash-11.2.202.273 (27 Feb 2013)
*adobe-flash-10.3.183.67 (27 Feb 2013)

  27 Feb 2013; Jeroen Roovers <jer@gentoo.org> -adobe-flash-10.3.183.61.ebuild,
  +adobe-flash-10.3.183.67.ebuild, +adobe-flash-11.2.202.273.ebuild:
  Version bump (bug #459368).

  17 Feb 2013; Jeroen Roovers <jer@gentoo.org> -adobe-flash-11.2.202.262.ebuild:
  Old.

  17 Feb 2013; Agostino Sarubbo <ago@gentoo.org>
  adobe-flash-11.2.202.270.ebuild:
  Stable for x86, wrt bug #457066

  14 Feb 2013; Richard Freeman <rich0@gentoo.org>
  adobe-flash-11.2.202.270.ebuild:
  amd64 stable - 457066

  13 Feb 2013; Jeroen Roovers <jer@gentoo.org>