@@ -1,6 +1,9 @@
 # ChangeLog for www-plugins/adobe-flash
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-plugins/adobe-flash/ChangeLog,v 1.181 2013/04/11 14:33:16 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-plugins/adobe-flash/ChangeLog,v 1.182 2013/04/11 14:35:53 jer Exp $
+
+  11 Apr 2013; Jeroen Roovers <jer@gentoo.org> -adobe-flash-10.3.183.68.ebuild:
+  Old.
 
 *adobe-flash-11.2.202.280 (11 Apr 2013)
 *adobe-flash-10.3.183.75 (11 Apr 2013)
